--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.49.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "video.js": "^8.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
