--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
     "react-icons": "^4.12.0",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.10.3",
     "video.js": "^8.6.1"
