--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.12.1",
     "axios": "^1.6.2",
+    "country-flag-icons": "^1.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
