--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@ramonak/react-progress-bar": "^5.1.1",
     "antd": "^5.12.1",
     "axios": "^1.6.2",
     "country-flag-icons": "^1.5.9",
