--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@ramonak/react-progress-bar": "^5.1.1",
+    "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.1",
     "axios": "^1.6.2",
     "country-flag-icons": "^1.5.9",
@@ -20,8 +21,10 @@
     "react-hook-form": "^7.49.0",
     "react-icons": "^4.12.0",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.10.3",
+    "redux-persist": "^6.0.0",
     "video.js": "^8.6.1"
   },
   "devDependencies": {
