--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@ramonak/react-progress-bar": "^5.1.1",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.1",
-    "axios": "^1.6.2",
+    "axios": "^1.6.5",
     "country-flag-icons": "^1.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.20.1",
     "recharts": "^2.10.3",
     "redux-persist": "^6.0.0",
+    "universal-cookie": "^7.0.1",
     "video.js": "^8.6.1"
   },
   "devDependencies": {
