--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.2.6",
     "@ramonak/react-progress-bar": "^5.1.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/antd": "^1.0.0",
     "antd": "^5.12.1",
     "axios": "^1.6.5",
     "country-flag-icons": "^1.5.9",
