--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "video.js": "^8.6.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
