--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/antd": "^1.0.0",
     "antd": "^5.12.1",
-    "axios": "^1.6.5",
+    "axios": "^1.6.6",
     "country-flag-icons": "^1.5.9",
     "dayjs": "^1.11.10",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
