feat: added env variable

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-IMAGE_BASE_URL=http://192.168.10.13:8000
+VITE_IMAGE_BASE_URL="http://192.168.10.13:8000"
+VITE_BASE_API="http://192.168.10.13:8000/api"
