--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_IMAGE_BASE_URL="http://68.183.224.38:8000"
-VITE_BASE_API="http://68.183.224.38:8000/api"
+VITE_IMAGE_BASE_URL="http://www.bdcallingacademy.com"
+VITE_BASE_API="http://www.bdcallingacademy.com/api"
