--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_IMAGE_BASE_URL="http://www.bdcallingacademy.com"
-VITE_BASE_API="http://www.bdcallingacademy.com/api"
+VITE_IMAGE_BASE_URL="http://www.bdcallingacademy.com:8000"
+VITE_BASE_API="http://www.bdcallingacademy.com:8000/api"
