--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_IMAGE_BASE_URL="https://server.bdcallingacademy.com"
-VITE_BASE_API="https://server.bdcallingacademy.com/api"
+VITE_IMAGE_BASE_URL="http://192.168.10.13:8000"
+VITE_BASE_API="http://192.168.10.13:8000/api"
