feat: added new features

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_IMAGE_BASE_URL="https://server.bdcallingacademy.com"
-VITE_BASE_API="https://server.bdcallingacademy.com/api"
+VITE_IMAGE_BASE_URL="https://hub.bdcallingacademy.com"
+VITE_BASE_API="https://hub.bdcallingacademy.com/api"
